--- a/frontend/src/AdminPages/productList/PostList.css
+++ b/frontend/src/AdminPages/productList/PostList.css
@@ -19,7 +19,7 @@ table {
     background-color: #eee;
   }
   
-  button {
+  .tableButton {
     background-color: #008080;
     color: #fff;
     border: none;
@@ -28,34 +28,7 @@ table {
     cursor: pointer;
   }
   
-  button:hover {
+  .tableButton:hover {
     background-color: #006666;
   }
 
-/* .productListItem{
-    display: flex;
-    align-items: center;
-}
-
-.productListImg {
-    width: 32px;
-    height: 32px;
-    border-radius: 50%;
-    object-fit: cover;
-    margin-right: 10px;
-  }
-
-.productListEdit{
-    border: none;
-    border-radius: 10px;
-    padding: 5px 10px;
-    background-color: #3bb077;
-    color: white;
-    cursor: pointer;
-    margin-right: 20px;
-}
-
-.productListDelete{
-    color: red;
-    cursor: pointer;
-} */
