--- a/frontend/src/Pages/Register/Register.css
+++ b/frontend/src/Pages/Register/Register.css
@@ -36,7 +36,7 @@
 }
 
 .loginBox{
-    height: 420px;
+    /* height: 390px; */
     padding: 40px;
     background-color: white;
     border-radius: 15px;
