--- a/frontend/src/AdminPages/Login/Login.css
+++ b/frontend/src/AdminPages/Login/Login.css
@@ -15,7 +15,7 @@
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
   }
   
-  h1 {
+  .adminHeading {
     margin-bottom: 30px;
     text-align: center;
     font-size: 2.5rem;
@@ -25,7 +25,7 @@
     margin-bottom: 20px;
   }
   
-  label {
+  .adminLabel {
     display: block;
     margin-bottom: 5px;
     font-size: 1.2rem;
