--- a/frontend/src/AdminPages/userList/userList.css
+++ b/frontend/src/AdminPages/userList/userList.css
@@ -20,7 +20,7 @@ th {
   background-color: #eee;
 }
 
-button {
+.tableUserButton {
   background-color: #008080;
   color: #fff;
   border: none;
@@ -29,7 +29,7 @@ button {
   cursor: pointer;
 }
 
-button:hover {
+.tableUserButton:hover {
   background-color: #006666;
 }
 
@@ -37,34 +37,3 @@ button:hover {
 
 
 
-/* .userList {
-  flex: 4;
-}
-
-.userListUser {
-  display: flex;
-  align-items: center;
-}
-
-.userListImg {
-  width: 32px;
-  height: 32px;
-  border-radius: 50%;
-  object-fit: cover;
-  margin-right: 10px;
-}
-
-.userListEdit{
-    border: none;
-    border-radius: 10px;
-    padding: 5px 10px;
-    background-color: #3bb077;
-    color: white;
-    cursor: pointer;
-    margin-right: 20px;
-}
-
-.userListDelete{
-    color: red;
-    cursor: pointer;
-} */
