--- a/frontend/src/Pages/Profile/Profile.css
+++ b/frontend/src/Pages/Profile/Profile.css
@@ -50,3 +50,77 @@
 .profileRightBottom{
     display: flex;
 }
+
+.allContainer{
+    background-color: #f0f2f5;
+}
+.container {
+    display: flex;
+    flex-direction: column;
+    max-width: 600px;
+    margin: 0 auto;
+    padding: 20px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    background-color: white;
+  }
+  
+  /* h1 {
+    font-size: 28px;
+    margin-bottom: 20px;
+    align-self: center;
+  } */
+  
+  .editProfileForm {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .editProfileLabel {
+    font-size: 15px;
+    margin-bottom: 3px;
+  }
+  
+  .editProfileInput,
+  .editProfileTextArea {
+    padding: 10px;
+    margin-bottom: 15px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    font-size: 16px;
+  }
+  
+  .inputProfile {
+    margin-bottom: 20px;
+  }
+  
+  .inputSubmit {
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    font-size: 18px;
+    cursor: pointer;
+    margin-bottom: 25px;
+  }
+  
+  .inputSubmit:hover {
+    background-color: #0069d9;
+  }
+  
+  .error-message {
+    color: #dc3545;
+    font-size: 14px;
+    margin-top: 5px;
+  }
+  
+  .inputProfile{
+    width: 380px;
+  }
+  .EditProfilePic{
+    margin-left: 20px;
+    background-color: #007bff;
+    font-size: 15px;
+    cursor: pointer;
+  }
